# instructed

./: .clang-format  .gitignore  BIOME_SYSTEM_GUIDE.md  CMakeLists.txt  README.md  TILEMAP_USAGE.md
.github/: copilot-instructions.md
core/: CMakeLists.txt
core/include/istd_core/: device.h  item.h  room.h  system.h  unit.h  world.h
core/include/istd_core/devices/: vehicle.h
core/src/: device.cpp  room.cpp  system.cpp  unit.cpp  world.cpp
core/src/devices/: vehicle.cpp
tilemap/: CMakeLists.txt  README.md
tilemap/docs/: api.md  dev.md  mineral_generation.md
tilemap/examples/: CMakeLists.txt  advanced_biome_demo.cpp  advanced_demo.cpp  basic_demo.cpp  biome_demo.cpp  bmp.h  dual_noise_demo.cpp  mineral_demo.cpp  noise_comparison.cpp  perlin_demo.cpp  tilemap_demo.cpp
tilemap/include/: biome.h  chunk.h  generation.h  noise.h  tile.h  tilemap.h  xoroshiro.h
tilemap/include/tilemap/: biome.h  chunk.h  generation.h  noise.h  tile.h  tilemap.h
tilemap/include/tilemap/pass/: base_tile_type.h  biome.h  coal.h  deepwater.h  mineral_cluster.h  mountain_hole_fill.h  oil.h  smoothen_island.h  smoothen_mountain.h
tilemap/src/: biome.cpp  chunk.cpp  generation.cpp  noise.cpp  tilemap.cpp  xoroshiro.cpp
tilemap/src/pass/: base_tile_type.cpp  biome.cpp  coal.cpp  deepwater.cpp  mineral_cluster.cpp  mountain_hole_fill.cpp  oil.cpp  smoothen_island.cpp  smoothen_mountain.cpp
util/: CMakeLists.txt
util/include/: util.h
util/include/istd_util/: small_map.h  tile_geometry.h  vec2.h
util/src/: tile_geometry.cpp  vec2.cpp
util/test/: CMakeLists.txt  small_map.cpp  test_small_map.cpp  test_tile_geometry.cpp  test_vec2.cpp
